align correction

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+body {
+    background-color: black;
+}
 .links{
-    color:black;
+    color:whitesmoke;
     text-decoration: none;
     width:100%;
     text-align: center;
@@ -10,4 +13,13 @@ div{
     width:100%;
     height:5vw;
     text-align: center;
+}
+
+#instruction {
+    color:whitesmoke;
+    text-decoration: none;
+    width:100%;
+    text-align: center;
+    font-size:1.5vw;
+
 }
